Fixed spacer size when element is invisible.

--- a/tests/style.css
+++ b/tests/style.css
@@ -57,3 +57,9 @@
 .box-sizing {
   box-sizing: border-box;
 }
+
+@media only screen and (max-width: 1000px) {
+  .float-right {
+    display: none;
+  }
+}
